@@ -81,9 +81,8 @@ import org.jkiss.dbeaver.model.exec.plan.DBCPlanStyle;
 import org.jkiss.dbeaver.model.exec.plan.DBCQueryPlanner;
 import org.jkiss.dbeaver.model.exec.plan.DBCQueryPlannerConfiguration;
 import org.jkiss.dbeaver.model.impl.DefaultServerOutputReader;
-import org.jkiss.dbeaver.model.impl.sql.SQLQueryTransformerCount;
 import org.jkiss.dbeaver.model.messages.ModelMessages;
-import org.jkiss.dbeaver.model.navigator.DBNUtils;
+import org.jkiss.dbeaver.model.navigator.NavigatorResources;
 import org.jkiss.dbeaver.model.preferences.DBPPreferenceStore;
 import org.jkiss.dbeaver.model.qm.QMTransactionState;
 import org.jkiss.dbeaver.model.qm.QMUtils;
@@ -94,12 +93,11 @@ import org.jkiss.dbeaver.model.runtime.DBRProgressMonitor;
 import org.jkiss.dbeaver.model.runtime.DBRRunnableWithProgress;
 import org.jkiss.dbeaver.model.sql.*;
 import org.jkiss.dbeaver.model.sql.data.SQLQueryDataContainer;
+import org.jkiss.dbeaver.model.sql.transformers.SQLQueryTransformerCount;
 import org.jkiss.dbeaver.model.struct.DBSDataContainer;
 import org.jkiss.dbeaver.model.struct.DBSInstance;
 import org.jkiss.dbeaver.model.struct.DBSObject;
 import org.jkiss.dbeaver.model.struct.DBSObjectState;
-import org.jkiss.dbeaver.model.struct.rdb.DBSCatalog;
-import org.jkiss.dbeaver.model.struct.rdb.DBSSchema;
 import org.jkiss.dbeaver.registry.DataSourceUtils;
 import org.jkiss.dbeaver.runtime.DBWorkbench;
 import org.jkiss.dbeaver.runtime.jobs.DataSourceMonitorJob;
@@ -158,7 +156,6 @@ import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 /**
  * SQL Executor
@@ -228,6 +225,7 @@ public class SQLEditor extends SQLEditorBase implements
     private SQLEditorOutputViewer outputViewer;
     private SQLVariablesPanel variablesViewer;
 
+    @Nullable
     private volatile QueryProcessor curQueryProcessor;
     private final List<QueryProcessor> queryProcessors = new ArrayList<>();
 
@@ -238,12 +236,11 @@ public class SQLEditor extends SQLEditorBase implements
     private volatile DBPContextProvider executionContextProvider;
     private SQLScriptContext globalScriptContext;
     private volatile boolean syntaxLoaded = false;
-    private FindReplaceTarget findReplaceTarget = new FindReplaceTarget();
+    private final FindReplaceTarget findReplaceTarget = new FindReplaceTarget();
     private final List<SQLQuery> runningQueries = new ArrayList<>();
     private QueryResultsContainer curResultsContainer;
     private Image baseEditorImage;
     private Image editorImage;
-    private Composite leftToolPanel;
     private ToolBarManager topBarMan;
     private ToolBarManager bottomBarMan;
     private VerticalFolder presentationSwitchFolder;
@@ -276,8 +273,8 @@ public class SQLEditor extends SQLEditorBase implements
         @Override
         public void widgetDisposed(DisposeEvent e) {
             Object data = e.widget.getData();
-            if (data instanceof QueryResultsContainer) {
-                QueryProcessor processor = ((QueryResultsContainer) data).queryProcessor;
+            if (data instanceof QueryResultsContainer queryResultsContainer) {
+                QueryProcessor processor = queryResultsContainer.queryProcessor;
                 List<QueryResultsContainer> containers = processor.getResultContainers();
                 for (int index = containers.indexOf(data) + 1; index < containers.size(); index++) {
                     QueryResultsContainer container = containers.get(index);
@@ -449,7 +446,7 @@ public class SQLEditor extends SQLEditorBase implements
 
             IFile file = EditorUtils.getFileFromInput(input);
             if (file != null && dataSourceContainer != null) {
-                DBNUtils.refreshNavigatorResource(dataSourceContainer.getProject(), file, container);
+                NavigatorResources.refreshNavigatorResource(dataSourceContainer.getProject(), file, container);
             } else {
                 // FIXME: this is a hack. We can't fire event on resource change so editor's state won't be updated in UI.
                 // FIXME: To update main toolbar and other controls we hade and show this editor
@@ -500,8 +497,8 @@ public class SQLEditor extends SQLEditorBase implements
         if (inputDataSource == null) {
             // No datasource. Try to get one from active part
             IWorkbenchPart activePart = getSite().getWorkbenchWindow().getActivePage().getActivePart();
-            if (activePart != this && activePart instanceof DBPDataSourceContainerProvider) {
-                inputDataSource = ((DBPDataSourceContainerProvider) activePart).getDataSourceContainer();
+            if (activePart != this && activePart instanceof DBPDataSourceContainerProvider dsp) {
+                inputDataSource = dsp.getDataSourceContainer();
             }
         }
         setDataSourceContainer(inputDataSource);
@@ -725,7 +722,7 @@ public class SQLEditor extends SQLEditorBase implements
         private final DBSInstance instance;
         private final Runnable onSuccess;
         private Throwable error;
-        private boolean readDefaultsFromInstance;
+        private final boolean readDefaultsFromInstance;
 
         OpenContextJob(DBSInstance instance, Runnable onSuccess, boolean readDefaultsFromInstance) {
             super("Open connection to " + instance.getDataSource().getContainer().getName());
@@ -747,7 +744,7 @@ public class SQLEditor extends SQLEditorBase implements
                 if (readDefaultsFromInstance && datasourceChanged) {
                     DBCExecutionContext defaultContext = DBUtils.getDefaultContext(instance, false);
                     if (defaultContext != null) {
-                        DBCExecutionContextDefaults contextDefaultsDB = defaultContext.getContextDefaults();
+                        DBCExecutionContextDefaults<?,?> contextDefaultsDB = defaultContext.getContextDefaults();
                         if (contextDefaultsDB != null) {
                             contextDefaultNames = new String[2];
                             contextDefaultNames[0] = contextDefaultsDB.getDefaultCatalog() != null ?
@@ -807,20 +804,12 @@ public class SQLEditor extends SQLEditorBase implements
         SeparateConnectionBehavior behavior = SeparateConnectionBehavior.parse(
             getActivePreferenceStore().getString(SQLPreferenceConstants.EDITOR_SEPARATE_CONNECTION)
         );
-        boolean isSeparateConnection;
-        switch (behavior) {
-            case ALWAYS:
-                isSeparateConnection = true;
-                break;
-            case NEVER:
-                isSeparateConnection = false;
-                break;
-            case DEFAULT:
-            default:
-                isSeparateConnection = this.getDataSourceContainer() == null
-                    || !this.getDataSourceContainer().isForceUseSingleConnection();
-                break;
-        }
+        boolean isSeparateConnection = switch (behavior) {
+            case ALWAYS -> true;
+            case NEVER -> false;
+            default -> this.getDataSourceContainer() == null
+                || !this.getDataSourceContainer().isForceUseSingleConnection();
+        };
         return getActivePreferenceStore().getBoolean(SQLPreferenceConstants.AUTO_SAVE_ACTIVE_SCHEMA) && isSeparateConnection;
     }
 
@@ -863,7 +852,17 @@ public class SQLEditor extends SQLEditorBase implements
         if (QMUtils.isTransactionActive(executionContext)) {
             return true;
         }
-        if (extraPresentationManager.activePresentation instanceof ISaveablePart && ((ISaveablePart) extraPresentationManager.activePresentation).isDirty()) {
+        if (isNonPersistentEditor()) {
+            Boolean state = ConfirmationDialog.getPersistedState(
+                SQLPreferenceConstants.CONFIRM_SAVE_SQL_CONSOLE,
+                ConfirmationDialog.QUESTION
+            );
+            if (state == Boolean.FALSE) {
+                // If the user chose not to save SQL consoles, then it's never considered dirty
+                return false;
+            }
+        }
+        if (extraPresentationManager.activePresentation instanceof ISaveablePart sp && sp.isDirty()) {
             return true;
         }
         return super.isDirty();
@@ -880,10 +879,10 @@ public class SQLEditor extends SQLEditorBase implements
             CTabItem activeResultsTab = getActiveResultsTab();
             if (activeResultsTab != null && UIUtils.isUIThread()) {
                 Object tabControl = activeResultsTab.getData();
-                if (tabControl instanceof QueryResultsContainer) {
-                    return ((QueryResultsContainer) tabControl).viewer;
-                } else if (tabControl instanceof SingleTabQueryProcessor) {
-                    return ((SingleTabQueryProcessor) tabControl).getFirstResults().viewer;
+                if (tabControl instanceof QueryResultsContainer qrc) {
+                    return qrc.viewer;
+                } else if (tabControl instanceof SingleTabQueryProcessor stqp) {
+                    return stqp.getFirstResults().viewer;
                 }
             }
         }
@@ -908,14 +907,14 @@ public class SQLEditor extends SQLEditorBase implements
             CTabItem activeResultsTab = getActiveResultsTab();
             if (activeResultsTab != null && UIUtils.isUIThread()) {
                 Object tabControl = activeResultsTab.getData();
-                if (tabControl instanceof QueryResultsContainer) {
-                    tabControl = ((QueryResultsContainer) tabControl).viewer;
+                if (tabControl instanceof QueryResultsContainer qrc) {
+                    tabControl = qrc.viewer;
                 }
-                if (tabControl instanceof SingleTabQueryProcessor) {
-                    tabControl = ((SingleTabQueryProcessor) tabControl).getFirstResults().viewer;
+                if (tabControl instanceof SingleTabQueryProcessor stqp) {
+                    tabControl = stqp.getFirstResults().viewer;
                 }
-                if (tabControl instanceof IAdaptable) {
-                    T adapter = ((IAdaptable) tabControl).getAdapter(required);
+                if (tabControl instanceof IAdaptable adaptable) {
+                    T adapter = adaptable.getAdapter(required);
                     if (adapter != null) {
                         return adapter;
                     }
@@ -1072,7 +1071,7 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     private void createControlsBar(Composite sqlEditorPanel) {
-        leftToolPanel = new Composite(sqlEditorPanel, SWT.LEFT);
+        Composite leftToolPanel = new Composite(sqlEditorPanel, SWT.LEFT);
         GridLayout panelsLayout = new GridLayout(1, true);
         panelsLayout.marginHeight = 2;
         panelsLayout.marginWidth = 1;
@@ -1222,7 +1221,7 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     public boolean isMultipleResultsPerTabEnabled() {
-        return CommonUtils.toBoolean(multipleResultsPerTabProperty.getPropertyValue(this).value);
+        return CommonUtils.toBoolean(multipleResultsPerTabProperty.getPropertyValue(this).value, false);
     }
 
     /**
@@ -1246,15 +1245,15 @@ public class SQLEditor extends SQLEditorBase implements
                     extraPresentationManager.activePresentationPanel = null;
                 }
                 Object data = e.item.getData();
-                if (data instanceof QueryResultsContainer) {
-                    setActiveResultsContainer((QueryResultsContainer) data);
-                } else if (data instanceof SingleTabQueryProcessor) {  
-                    setActiveResultsContainer(((SingleTabQueryProcessor) data).getFirstResults());
-                } else if (data instanceof SQLEditorPresentationPanel) {
-                    extraPresentationManager.activePresentationPanel = ((SQLEditorPresentationPanel) data);
+                if (data instanceof QueryResultsContainer qrc) {
+                    setActiveResultsContainer(qrc);
+                } else if (data instanceof SingleTabQueryProcessor stqp) {
+                    setActiveResultsContainer(stqp.getFirstResults());
+                } else if (data instanceof SQLEditorPresentationPanel pp) {
+                    extraPresentationManager.activePresentationPanel = pp;
                     extraPresentationManager.activePresentationPanel.activatePanel();
-                } else if (data instanceof ExplainPlanViewer) {
-                    SQLQuery planQuery = ((ExplainPlanViewer) data).getQuery();
+                } else if (data instanceof ExplainPlanViewer epv) {
+                    SQLQuery planQuery = epv.getQuery();
                     if (planQuery != null) {
                         getSelectionProvider().setSelection(new TextSelection(planQuery.getOffset(), 0));
                     }
@@ -1264,11 +1263,11 @@ public class SQLEditor extends SQLEditorBase implements
         this.addSashRatioSaveListener(resultsSash, SQLPreferenceConstants.RESULTS_PANEL_RATIO);
         this.resultTabs.addListener(TabFolderReorder.ITEM_MOVE_EVENT, event -> {
             CTabItem item = (CTabItem) event.item;
-            if (item.getData() instanceof QueryResultsContainer) {
-                ((MultiTabsQueryResultsContainer) item.getData()).resultsTab = item;
+            if (item.getData() instanceof MultiTabsQueryResultsContainer qrc) {
+                qrc.resultsTab = item;
             }
-            if (item.getData() instanceof SingleTabQueryProcessor) {
-                ((SingleTabQueryProcessor) item.getData()).resultsTab = item;
+            if (item.getData() instanceof SingleTabQueryProcessor stqp) {
+                stqp.resultsTab = item;
             }
         });
         restoreSashRatio(resultsSash, SQLPreferenceConstants.RESULTS_PANEL_RATIO);
@@ -1555,9 +1554,9 @@ public class SQLEditor extends SQLEditorBase implements
 
         createExtraViewControls();
 
-        if (outTab != null) showOutputPanel();
-        if (logTab != null) showExecutionLogPanel();
-        if (varTab != null) showVariablesPanel();
+        if (outTab != null) showOutputPanel(true);
+        if (logTab != null) showExecutionLogPanel(true);
+        if (varTab != null) showVariablesPanel(true);
     }
 
     public String getExtraPanelsLocation() {
@@ -1619,7 +1618,15 @@ public class SQLEditor extends SQLEditorBase implements
         return null;
     }
 
-    private void showExtraView(final String commandId, String name, String toolTip, Image image, Control view, IActionContributor actionContributor) {
+    private void showExtraView(
+        @NotNull final String commandId,
+        @NotNull String name,
+        @NotNull String toolTip,
+        @NotNull Image image,
+        @NotNull Control view,
+        @Nullable IActionContributor actionContributor,
+        @Nullable Boolean show // true - show, false - hide, null - toggle
+    ) {
         ToolItem viewItem = getViewToolItem(commandId);
         if (viewItem == null) {
             log.warn("Tool item for command " + commandId + " not found");
@@ -1628,9 +1635,14 @@ public class SQLEditor extends SQLEditorBase implements
         CTabFolder tabFolder = this.getFolderForExtraPanels();
         CTabItem curItem = getExtraViewTab(view);
         if (curItem != null) {
-            // Close tab if it is already open
-            viewItem.setSelection(false);
-            curItem.dispose();
+            if (show == null || !show) {
+                // Close tab if it is already open
+                viewItem.setSelection(false);
+                curItem.dispose();
+            }
+            return;
+        }
+        if (show != null && !show) {
             return;
         }
 
@@ -1762,34 +1774,37 @@ public class SQLEditor extends SQLEditorBase implements
         return tabItem != null && ((QueryResultsContainer) tabItem.getData()).isPinned();
     }
 
-    public void showOutputPanel() {
+    public void showOutputPanel(@Nullable Boolean show) {
         showExtraView(
             SQLEditorCommands.CMD_SQL_SHOW_OUTPUT,
             SQLEditorMessages.editors_sql_output,
             SQLEditorMessages.editors_sql_output_tip,
             IMG_OUTPUT,
             outputViewer,
-            manager -> manager.add(new OutputAutoShowToggleAction()));
+            manager -> manager.add(new OutputAutoShowToggleAction()),
+            show);
     }
 
-    public void showExecutionLogPanel() {
+    public void showExecutionLogPanel(@Nullable Boolean show) {
         showExtraView(
             SQLEditorCommands.CMD_SQL_SHOW_LOG,
             SQLEditorMessages.editors_sql_execution_log,
             SQLEditorMessages.editors_sql_execution_log_tip,
             IMG_LOG,
             logViewer,
-            null);
+            null,
+            show);
     }
 
-    public void showVariablesPanel() {
+    public void showVariablesPanel(@Nullable Boolean show) {
         showExtraView(
             SQLEditorCommands.CMD_SQL_SHOW_VARIABLES,
             SQLEditorMessages.editors_sql_variables,
             SQLEditorMessages.editors_sql_variables_tip,
             IMG_VARIABLES,
             variablesViewer,
-            null);
+            null,
+            show);
         UIUtils.asyncExec(() -> variablesViewer.refreshVariables());
     }
 
@@ -2030,11 +2045,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     public void toggleActivePanel() {
         if (resultsSash.getMaximizedControl() == null) {
-            if (UIUtils.hasFocus(resultTabs)) {
-                switchFocus(false);
-            } else {
-                switchFocus(true);
-            }
+            switchFocus(!UIUtils.hasFocus(resultTabs));
         }
     }
 
@@ -2050,8 +2061,7 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     private class PresentationPanelToggleAction extends Action {
-        private SQLPresentationPanelDescriptor panel;
-        private CTabItem tabItem;
+        private final SQLPresentationPanelDescriptor panel;
 
         public PresentationPanelToggleAction(SQLPresentationPanelDescriptor panel) {
             super(panel.getLabel(), Action.AS_CHECK_BOX);
@@ -2091,7 +2101,7 @@ public class SQLEditor extends SQLEditorBase implements
                     return;
                 }
                 extraPresentationManager.panels.put(panel, panelInstance);
-                tabItem = new CTabItem(resultTabs, SWT.CLOSE);
+                CTabItem tabItem = new CTabItem(resultTabs, SWT.CLOSE);
                 tabItem.setControl(panelControl);
                 tabItem.setText(panel.getLabel());
                 tabItem.setToolTipText(panel.getDescription());
@@ -2355,6 +2365,7 @@ public class SQLEditor extends SQLEditorBase implements
     @Override
     public void setFocus() {
         super.setFocus();
+        topBarMan.update(true);
     }
 
     public void loadQueryPlan() {
@@ -2399,7 +2410,7 @@ public class SQLEditor extends SQLEditorBase implements
             explainPlanFromQuery(planner, sqlQuery);
         } else if (planStyle == DBCPlanStyle.OUTPUT) {
             explainPlanFromQuery(planner, sqlQuery);
-            showOutputPanel();
+            showOutputPanel(true);
         } else {
             ExplainPlanViewer planView = getPlanView(sqlQuery, planner);
 
@@ -2439,8 +2450,7 @@ public class SQLEditor extends SQLEditorBase implements
 
         if (sqlQuery != null) {
             for (CTabItem item : resultTabs.getItems()) {
-                if (item.getData() instanceof ExplainPlanViewer) {
-                    ExplainPlanViewer pv = (ExplainPlanViewer) item.getData();
+                if (item.getData() instanceof ExplainPlanViewer pv) {
                     if (pv.getQuery() != null && pv.getQuery().equals(sqlQuery)) {
                         setResultTabSelection(item);
                         planView = pv;
@@ -2492,7 +2502,7 @@ public class SQLEditor extends SQLEditorBase implements
                 DBCPlan plan = planner.planQueryExecution(session, sqlQuery.getText(), configuration);
                 planQueryString[0] = plan.getPlanQueryString();
             } catch (Exception e) {
-                log.error(e);
+                DBWorkbench.getPlatformUI().showError("Explain error", "Failed to explain execution plan", e);
             }
         };
         if (RuntimeUtils.runTask(queryObtainTask, "Retrieve plan query", 5000) && !CommonUtils.isEmpty(planQueryString[0])) {
@@ -2594,14 +2604,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     public void exportDataFromQuery(@Nullable SQLScriptContext sqlScriptContext)
     {
-        List<SQLScriptElement> elements;
-        ITextSelection selection = (ITextSelection) getSelectionProvider().getSelection();
-        if (selection.getLength() > 1) {
-            elements = extractScriptQueries(selection.getOffset(), selection.getLength(), true, false, true);
-        } else {
-            elements = new ArrayList<>();
-            elements.add(extractActiveQuery());
-        }
+        List<SQLScriptElement> elements = getSelectedQueries();
 
         if (!elements.isEmpty()) {
             processQueries(elements, false, false, true, true, null, sqlScriptContext);
@@ -2610,6 +2613,23 @@ public class SQLEditor extends SQLEditorBase implements
                     "Extract data",
                     "Choose one or more queries to export from");
         }
+    }
+
+    @NotNull
+    public List<SQLScriptElement> getSelectedQueries() {
+        List<SQLScriptElement> elements = new ArrayList<>();
+        ITextSelection selection = (ITextSelection) getSelectionProvider().getSelection();
+
+        if (selection.getLength() > 1) {
+            elements.addAll(extractScriptQueries(selection.getOffset(), selection.getLength(), true, false, true));
+        } else {
+            SQLScriptElement query = extractActiveQuery();
+            if (query != null) {
+                elements.add(query);
+            }
+        }
+
+        return elements;
     }
 
     public boolean processQueries(@NotNull final List<SQLScriptElement> queries, final boolean forceScript,
@@ -2656,7 +2676,18 @@ public class SQLEditor extends SQLEditorBase implements
         if (!dataSourceContainer.hasModifyPermission(DBPDataSourcePermission.PERMISSION_EXECUTE_SCRIPTS)) {
             DBWorkbench.getPlatformUI().showError(
                 SQLEditorMessages.editors_sql_error_cant_execute_query_title,
-                "Query execution was restricted by connection configuration");
+                SQLEditorMessages.editors_sql_error_cant_execute_permissions_query_message
+            );
+            return false;
+        }
+
+        if (dataSourceContainer.isConnectionReadOnly() &&
+            queries.stream().anyMatch(q -> (q instanceof SQLQuery sqlQuery && sqlQuery.isMutatingStatement()))
+        ) {
+            DBWorkbench.getPlatformUI().showError(
+                SQLEditorMessages.editors_sql_error_cant_execute_query_title,
+                SQLEditorMessages.editors_sql_error_cant_execute_readonly_query_message
+            );
             return false;
         }
 
@@ -2666,8 +2697,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         final boolean isSingleQuery = !forceScript && (queries.size() == 1);
-        if (isSingleQuery && queries.get(0) instanceof SQLQuery) {
-            SQLQuery query = (SQLQuery) queries.get(0);
+        if (isSingleQuery && queries.get(0) instanceof SQLQuery query) {
             boolean isDropTable = query.isDropTableDangerous();
             if (query.isDeleteUpdateDangerous() || isDropTable) {
                 String targetName = "multiple tables";
@@ -2679,8 +2709,8 @@ public class SQLEditor extends SQLEditorBase implements
                     ConfirmationDialog.WARNING, isDropTable ? SQLPreferenceConstants.CONFIRM_DROP_SQL : SQLPreferenceConstants.CONFIRM_DANGER_SQL,
                     ConfirmationDialog.CONFIRM,
                     query.getType().name(),
-                    targetName) != IDialogConstants.OK_ID)
-                {
+                    targetName) != IDialogConstants.OK_ID
+                ) {
                     return false;
                 }
             }
@@ -2689,8 +2719,8 @@ public class SQLEditor extends SQLEditorBase implements
                 getSite().getShell(),
                 ConfirmationDialog.WARNING, SQLPreferenceConstants.CONFIRM_MASS_PARALLEL_SQL,
                 ConfirmationDialog.CONFIRM,
-                queries.size()) != IDialogConstants.OK_ID)
-            {
+                queries.size()) != IDialogConstants.OK_ID
+            ) {
                 return false;
             }
         }
@@ -2712,7 +2742,7 @@ public class SQLEditor extends SQLEditorBase implements
 
         boolean replaceCurrentTab = getActivePreferenceStore().getBoolean(SQLPreferenceConstants.RESULT_SET_REPLACE_CURRENT_TAB);
 
-        if (!export) {
+        if (!export && curQueryProcessor != null) {
             // We only need to prompt user to close extra (unpinned) tabs if:
             // 1. The user is not executing query in a new tab
             // 2. The user is executing script that may open several result sets
@@ -2731,8 +2761,16 @@ public class SQLEditor extends SQLEditorBase implements
             // 1. Or all tabs are closed and no query processors are present
             // 2. Or current query processor has pinned tabs
             // 3. Or current query processor has running jobs
-            if (newTab || queryProcessors.isEmpty() || curQueryProcessor.hasPinnedTabs() || curQueryProcessor.getRunningJobs() > 0) {
+            // 4. Or current query processor is multi-tabbed and user wants single-tabbed or vice versa
+            var noQueryProcessors = queryProcessors.isEmpty();
+            var hasRunningJobs = !noQueryProcessors && curQueryProcessor.getRunningJobs() > 0;
+            var hasPinnedTabs = !noQueryProcessors && curQueryProcessor.hasPinnedTabs();
+            var needAnotherQueryProcessor = !noQueryProcessors && useTabPerQuery(isSingleQuery)
+                && !(curQueryProcessor instanceof MultiTabsQueryProcessor);
+
+            if (newTab || noQueryProcessors || hasRunningJobs || hasPinnedTabs || needAnotherQueryProcessor) {
                 boolean foundSuitableTab = false;
+                boolean anyNotPinnedTab = false;
 
                 // Try to find suitable query processor among exiting ones if:
                 // 1. New tab is not required
@@ -2744,12 +2782,13 @@ public class SQLEditor extends SQLEditorBase implements
                             curQueryProcessor = processor;
                             break;
                         }
+                        anyNotPinnedTab = anyNotPinnedTab || !processor.hasPinnedTabs();
                     }
                 }
                 // Just create a new query processor
-                if (!foundSuitableTab) {
+                if (!foundSuitableTab && (newTab || !anyNotPinnedTab)) {
                     // If we already have useless multi-tabbed processor, but we want single-tabbed, then get rid of the useless one  
-                    if (curQueryProcessor instanceof MultiTabsQueryProcessor 
+                    if (needAnotherQueryProcessor
                         && curQueryProcessor.getResultContainers().size() == 1
                         && !curQueryProcessor.getFirstResults().viewer.hasData()
                     ) {
@@ -2776,7 +2815,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
 
-        if (curQueryProcessor == null || (useTabPerQuery(isSingleQuery) == (curQueryProcessor instanceof SingleTabQueryProcessor))) {
+        if (curQueryProcessor == null || (newTab && useTabPerQuery(isSingleQuery) == (curQueryProcessor instanceof SingleTabQueryProcessor))) {
             createQueryProcessor(true, isSingleQuery, true);
         }
 
@@ -2795,7 +2834,7 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     public void cancelActiveQuery() {
-        if (isActiveQueryRunning()) {
+        if (curQueryProcessor != null && isActiveQueryRunning()) {
             curQueryProcessor.cancelJob();
         }
     }
@@ -2864,6 +2903,12 @@ public class SQLEditor extends SQLEditorBase implements
                 }
             }
             return confirmResult;
+        } else if (tabsToClose.size() == 1) {
+            if (tabsToClose.get(0).getData() instanceof SingleTabQueryProcessor sqp) {
+                // to avoid concurrent modification exception
+                List<QueryResultsContainer> results = new ArrayList<>(sqp.getResultContainers());
+                results.stream().skip(1).forEach(QueryResultsContainer::dispose);
+            }
         }
         // No need to close anything
         return IDialogConstants.IGNORE_ID;
@@ -3025,13 +3070,11 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     @Override
-    public void beforeConnect()
-    {
+    public void beforeConnect() {
     }
 
     @Override
-    public void beforeDisconnect()
-    {
+    public void beforeDisconnect() {
         closeAllJobs();
     }
 
@@ -3179,32 +3222,44 @@ public class SQLEditor extends SQLEditorBase implements
                             break;
                     }
                     updateExecutionContext(null);
-                    
-                    boolean contextChanged = false;
-                    if (event.getAction().equals(DBPEvent.Action.OBJECT_SELECT)
-                        && event.getData() == this.getExecutionContext()
-                        && event.getEnabled()
-                    ) {
-                        DBCExecutionContext execContext = this.getExecutionContext();
-                        DBCExecutionContextDefaults<DBSCatalog, DBSSchema> ctxDefault = execContext == null
-                            ? null
-                            : execContext.getContextDefaults();
-                        if (ctxDefault != null
-                            && (event.getObject() == ctxDefault.getDefaultCatalog() || event.getObject() == ctxDefault.getDefaultSchema())
-                        ) {
-                            contextChanged = true;
-                        }
-                    }
+
+                    boolean contextChanged = isContextChanged(event);
                     onDataSourceChange(contextChanged);
                 }
             );
         }
     }
 
+    private boolean isContextChanged(DBPEvent event) {
+        DBPEvent.Action eventAction = event.getAction();
+        boolean isEditorContext = event.getData() == this.getExecutionContext();
+        boolean contextChanged = isEditorContext && eventAction.equals(DBPEvent.Action.OBJECT_UPDATE);
+        if (!contextChanged && isEditorContext && eventAction.equals(DBPEvent.Action.OBJECT_SELECT) && event.getEnabled()) {
+            DBCExecutionContext execContext = this.getExecutionContext();
+            DBCExecutionContextDefaults<?, ?> ctxDefault = execContext == null
+                ? null
+                : execContext.getContextDefaults();
+            if (ctxDefault != null
+                && (event.getObject() == ctxDefault.getDefaultCatalog() || event.getObject() == ctxDefault.getDefaultSchema())
+            ) {
+                contextChanged = true;
+            }
+        }
+        return contextChanged;
+    }
+
     @Override
     public void doSave(IProgressMonitor monitor) {
         if (isNonPersistentEditor()) {
-            saveAsNewScript();
+            int decision = ConfirmationDialog.confirmAction(
+                getSite().getShell(),
+                ConfirmationDialog.INFORMATION,
+                SQLPreferenceConstants.CONFIRM_SAVE_SQL_CONSOLE,
+                ConfirmationDialog.QUESTION
+            );
+            if (decision == IDialogConstants.YES_ID) {
+                saveAsNewScript();
+            }
             return;
         }
 
@@ -3285,7 +3340,8 @@ public class SQLEditor extends SQLEditorBase implements
             queryProcessor.cancelJob();
             // FIXME: it is a hack (to avoid asking "Save script?" because editor is marked as dirty while queries are running)
             // FIXME: make it better
-            queryProcessor.curJobRunning.set(0);
+            // heavy abstractions leakage
+            queryProcessor.curJobRunning.updateAndGet(i -> 0);
         }
 
         // End transaction
@@ -3558,7 +3614,7 @@ public class SQLEditor extends SQLEditorBase implements
     public abstract class QueryProcessor implements SQLResultsConsumer, ISmartTransactionManager, QueryProcessingComponent {
 
         private volatile SQLQueryJob curJob;
-        private AtomicInteger curJobRunning = new AtomicInteger(0);
+        private final AtomicInteger curJobRunning = new AtomicInteger(0);
         protected final List<QueryResultsContainer> resultContainers = new ArrayList<>();
         private volatile DBDDataReceiver curDataReceiver = null;
 
@@ -3608,7 +3664,6 @@ public class SQLEditor extends SQLEditorBase implements
             }
             return false;
         }
-
 
         @NotNull
         QueryResultsContainer getFirstResults()
@@ -3690,11 +3745,10 @@ public class SQLEditor extends SQLEditorBase implements
 
                 if (export) {
                     List<IDataTransferProducer<?>> producers = new ArrayList<>();
-                    for (int i = 0; i < queries.size(); i++) {
-                        SQLScriptElement element = queries.get(i);
-                        if (element instanceof SQLControlCommand) {
+                    for (SQLScriptElement element : queries) {
+                        if (element instanceof SQLControlCommand controlCommand) {
                             try {
-                                scriptContext.executeControlCommand((SQLControlCommand) element);
+                                scriptContext.executeControlCommand(controlCommand);
                             } catch (DBException e) {
                                 DBWorkbench.getPlatformUI().showError("Command error", "Error processing control command", e);
                             }
@@ -4067,7 +4121,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
 
-        @NotNull
+        @Nullable
         @Override
         public DBPProject getProject() {
             return SQLEditor.this.getProject();
@@ -4124,7 +4178,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
             List<String> features = new ArrayList<>(3);
             features.add(FEATURE_DATA_SELECT);
-            if (query instanceof SQLQuery && ((SQLQuery) query).isModifiyng()) {
+            if (query instanceof SQLQuery sqlQuery && sqlQuery.isModifying()) {
                 features.add(FEATURE_DATA_MODIFIED_ON_REFRESH);
             }
             features.add(FEATURE_DATA_COUNT);
@@ -4154,11 +4208,10 @@ public class SQLEditor extends SQLEditorBase implements
             if (job == null) {
                 throw new DBCException("No active query - can't read data");
             }
-            if (this.query instanceof SQLQuery) {
-                SQLQuery query = (SQLQuery) this.query;
-                if (query.getResultsMaxRows() >= 0) {
-                    firstRow = query.getResultsOffset();
-                    maxRows = query.getResultsMaxRows();
+            if (this.query instanceof SQLQuery sqlQuery) {
+                if (sqlQuery.getResultsMaxRows() >= 0) {
+                    firstRow = sqlQuery.getResultsOffset();
+                    maxRows = sqlQuery.getResultsMaxRows();
                 }
             }
             try {
@@ -4689,11 +4742,11 @@ public class SQLEditor extends SQLEditorBase implements
     private int getMaxResultsTabIndex() {
         int maxIndex = 0;
         for (CTabItem tab : resultTabs.getItems()) {
-            if (tab.getData() instanceof QueryResultsContainer) {
-                maxIndex = Math.max(maxIndex, ((QueryResultsContainer) tab.getData()).getResultSetIndex());
+            if (tab.getData() instanceof QueryResultsContainer qrc) {
+                maxIndex = Math.max(maxIndex, qrc.getResultSetIndex());
             }
-            if (tab.getData() instanceof SingleTabQueryProcessor) {
-                List<QueryResultsContainer> results = ((SingleTabQueryProcessor) tab.getData()).getResultContainers();
+            if (tab.getData() instanceof SingleTabQueryProcessor stqp) {
+                List<QueryResultsContainer> results = stqp.getResultContainers();
                 maxIndex = Math.max(maxIndex, results.get(results.size() - 1).getResultSetIndex());
             }
         }
@@ -4724,10 +4777,6 @@ public class SQLEditor extends SQLEditorBase implements
         private SQLEditorQueryListener(QueryProcessor queryProcessor, boolean closeTabOnError) {
             this.queryProcessor = queryProcessor;
             this.closeTabOnError = closeTabOnError;
-        }
-
-        public SQLQueryListener getExtListener() {
-            return extListener;
         }
 
         public void setExtListener(SQLQueryListener extListener) {
@@ -4793,13 +4842,11 @@ public class SQLEditor extends SQLEditorBase implements
 
         @Override
         public void onEndQuery(final DBCSession session, final SQLQueryResult result, DBCStatistics statistics) {
-            refreshContextDefaults(session, result);
-
             try {
                 synchronized (runningQueries) {
                     runningQueries.remove(result.getStatement());
                 }
-                queryProcessor.curJobRunning.decrementAndGet();
+                queryProcessor.curJobRunning.updateAndGet(i -> i > 0 ? i - 1 : i);
                 if (getTotalQueryRunning() <= 0) {
                     UIUtils.asyncExec(() -> {
                         if (isDisposed()) {
@@ -4830,14 +4877,11 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
 
-        private void refreshContextDefaults(DBCSession session, SQLQueryResult result) {
+        private void refreshContextDefaults(DBCSession session) {
             final DBCExecutionContext executionContext = getExecutionContext();
             if (executionContext != null && session != null) {
                 // Refresh active object
-                if ((result == null || !result.hasError()) &&
-                    executionContext.getDataSource().getContainer().isExtraMetadataReadEnabled() &&
-                    getActivePreferenceStore().getBoolean(SQLPreferenceConstants.REFRESH_DEFAULTS_AFTER_EXECUTE)
-                ) {
+                if (getActivePreferenceStore().getBoolean(SQLPreferenceConstants.REFRESH_DEFAULTS_AFTER_EXECUTE)) {
                     DBCExecutionContextDefaults<?, ?> contextDefaults = executionContext.getContextDefaults();
                     if (contextDefaults != null) {
                         try {
@@ -4866,7 +4910,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (error != null) {
                 setStatus(GeneralUtils.getFirstMessage(error), DBPMessageType.ERROR);
-                SQLQuery originalQuery = curResultsContainer.query instanceof SQLQuery ? (SQLQuery) curResultsContainer.query : null; // SQLQueryResult stores modified query
+                SQLQuery originalQuery = curResultsContainer.query instanceof SQLQuery sqlQuery ? sqlQuery : null; // SQLQueryResult stores modified query
                 if (!visualizeQueryErrors(monitor, query, error, originalQuery)) {
                     int errorQueryOffset = query.getOffset();
                     int errorQueryLength = query.getLength();
@@ -4898,7 +4942,7 @@ public class SQLEditor extends SQLEditorBase implements
                     }
                 }
                 // Set tab names by query results names
-                if (scriptMode || queryProcessor.getResultContainers().size() > 0) {
+                if (scriptMode || !queryProcessor.getResultContainers().isEmpty()) {
 
                     int queryIndex = queryProcessors.indexOf(queryProcessor);
                     int resultsIndex = 0;
@@ -4911,9 +4955,8 @@ public class SQLEditor extends SQLEditorBase implements
                             // But we need to avoid the result tab with the select statement
                             // because the statistics window can not be in focus in this case
 
-                            if (!(scriptMode && results.query instanceof SQLQuery sqlQuery && sqlQuery.getData() == SQLQueryJob.STATS_RESULTS)) {
-                                results.handleExecuteResult(result);
-                            }
+                            results.handleExecuteResult(result);
+
                             if (getActivePreferenceStore().getBoolean(SQLPreferenceConstants.SET_SELECTION_TO_STATISTICS_TAB) &&
                                 query.getType() != SQLQueryType.SELECT
                             ) {
@@ -4989,6 +5032,13 @@ public class SQLEditor extends SQLEditorBase implements
                 if (extListener != null) extListener.onEndScript(statistics, hasErrors);
             }
 
+        }
+
+        @Override
+        public void onEndSqlJob(DBCSession session, SqlJobResult result) {
+            if (result == SqlJobResult.SUCCESS || result == SqlJobResult.PARTIAL_SUCCESS) {
+                refreshContextDefaults(session);
+            }
         }
     }
 
@@ -5370,7 +5420,7 @@ public class SQLEditor extends SQLEditorBase implements
             List<PrintWriter> addInWriters = addIns.stream()
                 .map(SQLEditorAddIn::getServerOutputConsumer)
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
 
             final DBCOutputWriter outputWriter = new DBCOutputWriter() {
                 @Override
@@ -5444,7 +5494,7 @@ public class SQLEditor extends SQLEditorBase implements
                 if (getActivePreferenceStore().getBoolean(SQLPreferenceConstants.OUTPUT_PANEL_AUTO_SHOW)) {
                     ToolItem toolItem = getViewToolItem(SQLEditorCommands.CMD_SQL_SHOW_OUTPUT);
                     if (toolItem != null && !toolItem.getSelection()) {
-                        showOutputPanel();
+                        showOutputPanel(true);
                     }
                 }
 /*
@@ -5516,10 +5566,9 @@ public class SQLEditor extends SQLEditorBase implements
     @NotNull
     private DBPPreferenceStore getContextPrefStore(@NotNull QueryResultsContainer container) {
         DBCExecutionContext context = container.getExecutionContext();
-        DBPPreferenceStore contextPrefStore = context != null
+        return context != null
             ? context.getDataSource().getContainer().getPreferenceStore()
             : DBWorkbench.getPlatform().getPreferenceStore();
-        return contextPrefStore;
     }
 
     @Nullable
